# Heterogeneous-formation-controller

./: CMakeLists.txt  README.md  package.xml
heterogeneous_formation_controller/: CMakeLists.txt  LICENSE  lp_plugin.xml
heterogeneous_formation_controller/config/: demo.rviz  test-stage.rviz  test.rviz
heterogeneous_formation_controller/config/map/: map.yaml
heterogeneous_formation_controller/config/move_base/: costmap_common.yaml  liom_planner.yaml
heterogeneous_formation_controller/config/stage/: maze_carlike.world
heterogeneous_formation_controller/gazebo/worlds/: complete_demo.world  ras_demo.world
heterogeneous_formation_controller/include/formation_generation/: corridor.hpp  coupled_traj_publisher.hpp  ecbs_planner.hpp  init_traj_planner.hpp  optimization.h  prioritized_traj_optimization.hpp  prioritized_traj_publisher.hpp
heterogeneous_formation_controller/include/heterogeneous_formation_controller/: IdentifyHomotopy.h  coarse_path_planner.h  environment.h  forward_kinematics.h  heterogeneous_formation_controller.h  heterogeneous_formation_controller_ros.h  lightweight_nlp_problem.h  optimizer_interface.h  planner_config.h  time.h  topo_prm.h  vehicle_model.h  yaml_all.h
heterogeneous_formation_controller/include/traj_tracking/: fg_test.h  generate_vertex.h  pure_pursuit.h
heterogeneous_formation_controller/launch/: Test_1_world.pgm  Test_1_world.yaml  Test_3.launch  amcl.launch  animation.launch  animation_complete.launch  demo_fg_test.launch  demo_fk_test.launch  demo_fp_test.launch  demo_stage.launch  demo_ta_test.launch  flexble_formation.launch  generate_decomp.launch  move_base.launch  prioritized_plan_random_env.launch  prm_config.rviz  setup_robots.launch  test_1.world  test_decomp.launch  topological_test.launch
heterogeneous_formation_controller/launch/formation_coordination/: animation_coord.launch  fcoord_test.launch
heterogeneous_formation_controller/launch/sara_simulation/: load_data.launch  sara_simulation.launch  sara_traj_tracking.launch
heterogeneous_formation_controller/launch/traj_tracking/: animation_demo.launch  backstepping.launch  control_rectangle_formation.launch  control_triangular_formation.launch  fg_test.launch  formation_coordination_demo.launch  formation_generation.launch  gazebo_tb3_sim.launch  heterogeneous_rectangle.launch  heterogeneous_triangle.launch  one_car_test.launch  pid.launch  plot_result3.launch  seven_turtlebot.launch
heterogeneous_formation_controller/missions/: formation_test.json  mission_10.json  mission_15.json
heterogeneous_formation_controller/src/: yaml.cpp
heterogeneous_formation_controller/src/animation/: animation_demo.cpp  complete_animation.cpp
heterogeneous_formation_controller/src/decomp_util/: generate_decomp.cpp  test_decomp.cpp
heterogeneous_formation_controller/src/formation_coordination/: animation.cpp  fcoord_test.cpp
heterogeneous_formation_controller/src/formation_generation/: animation.cpp  coupled_traj_planner.cpp  fg_test_node.cpp  prioritized_traj_planner.cpp  random_map_generator.cpp  warehouse_map_generator.cpp
heterogeneous_formation_controller/src/formation_planning/: IdentifyHomotopy.cpp  animation.cpp  coarse_path_planner.cpp  environment.cpp  fk_test.cpp  forward_kinematics.cpp  heterogeneous_formation_controller.cpp  heterogeneous_formation_controller_ros.cpp  hmfpc_test_node.cpp  lightweight_nlp_problem.cpp  topo_prm.cpp  topologic_pp.cpp
heterogeneous_formation_controller/src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
heterogeneous_formation_controller/src/sarah_simulation/: load_data.cpp  traj_tracking.cpp
heterogeneous_formation_controller/src/task_assignment/: Hungarian.cpp  ta_test_node.cpp
heterogeneous_formation_controller/src/trajectory_tracking/: ackerman.md  demo_tri.sh  plot.cpp  plot_result.cpp  plot_result3.cpp
heterogeneous_formation_controller/src/visualization/: color.cpp  plot.cpp
heterogeneous_formation_controller/traj_result/: data.json  experiment_2.yaml  experiment_3.yaml  experiment_4.yaml  experiment_trade_off0.yaml  experiment_trade_off1.yaml  experiment_trade_off10.yaml  experiment_trade_off11.yaml  experiment_trade_off12.yaml  experiment_trade_off13.yaml  experiment_trade_off14.yaml  experiment_trade_off2.yaml  experiment_trade_off3.yaml  experiment_trade_off4.yaml  fg_plan.yaml  fg_terminal.yaml  fp_compare_2023.yaml  fp_compare_ours.yaml  obs.yaml  obstacle.yaml  rviz_1.yaml  rviz_2.yaml  rviz_3.yaml  sarah_traj.yaml  traj_leader.yaml  visualize.py
heterogeneous_formation_controller/traj_result/complete_demo/: trl_1.yaml  trl_2.yaml  trl_4.yaml  trl_5.yaml
heterogeneous_formation_controller/traj_result/complete_demo_2/: trl_1.yaml  trl_2.yaml  trl_3.yaml  trl_4.yaml  trl_5.yaml
heterogeneous_formation_controller/traj_result/five_robots_goal_post_linear/: trl_4.yaml
heterogeneous_formation_controller/traj_result/five_robots_goal_posting/: trl_3.yaml  trl_4.yaml  trl_5.yaml
heterogeneous_formation_controller/traj_result/five_robots_linear/: trl_1.yaml  trl_4.yaml  trl_5.yaml
heterogeneous_formation_controller/traj_result/five_robtos_goal_oppositting/: trl_1.yaml  trl_3.yaml  trl_4.yaml  trl_5.yaml
heterogeneous_formation_controller/traj_result/flexible_formation/: height.yaml  traj_30.yaml  traj_31.yaml  traj_32.yaml  traj_40.yaml  traj_41.yaml  traj_42.yaml  traj_43.yaml  traj_50.yaml  traj_51.yaml  traj_52.yaml  traj_53.yaml  traj_54.yaml
heterogeneous_formation_controller/traj_result/gazebo_demo/: trl_1.yaml  trl_2.yaml  trl_3.yaml
heterogeneous_formation_controller/traj_result/ras_demo/: trl_2.yaml  trl_3.yaml
heterogeneous_formation_controller/traj_result/three_robots_goal_post_linear/: car_like1.yaml  diff_drive0.yaml  leader0.yaml  priority.yaml  trl_3.yaml
heterogeneous_formation_controller/traj_result/three_robots_goal_posting/: car_like1.yaml  car_like2.yaml  diff_drive0.yaml  diff_drive1.yaml  diff_drive2.yaml  leader1.yaml  trl_1.yaml  trl_2.yaml  trl_3.yaml
heterogeneous_formation_controller/traj_result/three_robots_linear/: trl_3.yaml
(+532 files in other folders)
